# capstone-vision

./: gitignore
action/: action_reference.py  extract_mediapipe.py  requirements.txt  train_final.py
person_follower/: package.xml  requirements.txt  setup.py
person_follower/config/: params.yaml
person_follower/launch/: person_follower.launch.py
person_follower/msg/: PersonStatus.msg
person_follower/person_follower/: camera_publisher_node.py  person_follower_node.py  visualizer_node.py
